# namecheap-ddns

./: Cargo.toml  LICENSE  LICENSE.txt  README.md
.github/workflows/: continuous-integration-workflow.yml  release-workflow.yml
src/: main.rs
