[package]
name = "namecheap-ddns"
description = "Updates the A + Dynamic DNS records for Namecheap"
version = "0.2.4"
authors = ["Jeremy Nicklas <jeremywnicklas@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["namecheap", "ddns"]
homepage = "https://github.com/nickjer/namecheap-ddns"
repository = "https://github.com/nickjer/namecheap-ddns"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
url = "2"
minreq = { version = "2", features = ["https"] }
quick-xml = "0.30"

[profile.release]
lto = true
codegen-units = 1
